Tugas Kelompok PBF Modul 2 Kelompok 1
Pembaharuan baris kode di mana opsi tampilan jawaban diubah dari yang tadinya menampilkan angka 1, 2, dan 3, berubah tampilannya menjadi a, b, dan c. Dengan perubahan ini maka jawaban yang diberikan oleh pengguna juga ikut berubah, dari yang tadinya memberikan input 1, 2, atau 3 menjadi a, b, atau c. Diperlukan penambahan baris kode untuk menghitung skor akhir pengguna, menggunakan fungsi reduce yang memanfaatkan fungsi lambda di dalamnya. Perlu perbaikan lebih lanjut.

--- a/Modul2/Prak_PBF_RA_Kel_1_Modul_2.ipynb
+++ b/Modul2/Prak_PBF_RA_Kel_1_Modul_2.ipynb
@@ -92,10 +92,7 @@
         "    question_text, choices, correct_answer = question\n",
         "    numbered_question_text = f\"{question_number}. {question_text}\"\n",
         "    correct_index = ord(correct_answer) - 97\n",
-        "    return score + 20 if get_answer(numbered_question_text, choices) == correct_index else score\n",
-        "\n",
-        "final_score = reduce(lambda score, question: calculate_score(score, question[1], question[0]+1), enumerate(questions), 0)\n",
-        "print(\"Skor kamu adalah\", final_score)"
+        "    return score + 20 if get_answer(numbered_question_text, choices) == correct_index else score"
       ]
     }
   ]
