--- a/Modul2/Prak_PBF_RA_Kel_1_Modul_2.ipynb
+++ b/Modul2/Prak_PBF_RA_Kel_1_Modul_2.ipynb
@@ -24,8 +24,8 @@
         "    (\"\"\"Diketahui 12 pekerja dapat menghasilkan gerabah sebanyak 20 buah dalam waktu 25 hari.\n",
         "Jika terdapat 30 pekerja yang menghasilkan 32 buah gerabah, maka berapa waktu yang diperlukan?\"\"\", [\"20 hari\", \"18 hari\", \"16 hari\"], 3),\n",
         "    (\"11.1% dari 1827 ?\", [\"201\", \"203\", \"164.59\"], 2),\n",
-        "    (\"Deteriorasi = ... \", [\"Kemajuan\", \"Bagian\", \"Kemerosotan\"], 3),\n",
-        "    (\"Militan >< ... \", [\"Agresif\", \"Tenang\", \"Ideologi\"], 2),\n",
+        "    (\"Deteriorasi adalah \", [\"Kemajuan\", \"Bagian\", \"Kemerosotan\"], 3),\n",
+        "    (\"Militan >< \", [\"Agresif\", \"Tenang\", \"Ideologi\"], 2),\n",
         "]\n",
         "\n",
         "def get_answer(question, choices):\n",
@@ -40,36 +40,13 @@
         "                raise ValueError(\"Jawaban tidak valid.\")\n",
         "            return jawaban\n",
         "        except ValueError:\n",
-        "            print(\"Masukkan angka yang valid.\")\n",
-        "\n",
-        "def calculate_score(score, question):\n",
-        "    question_text, choices, correct_answer = question\n",
-        "    return score + 20 if get_answer(question_text, choices) == correct_answer - 1 else score\n",
-        "\n",
-        "final_score = reduce(lambda score, question: calculate_score(score, question), questions, 0)\n",
-        "\n",
-        "print(\"Skor kamu adalah\", final_score)"
+        "            print(\"Masukkan angka yang valid.\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eDm6eA5dHECM",
-        "outputId": "3d9c0548-57d3-4b5a-bbf9-0b7aa7a7d433"
+        "id": "eDm6eA5dHECM"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Diketahui 15p + 27 = 6pq. Nilai 4pq - 18 ?\n",
-            "1. 10p\n",
-            "2. 12p\n",
-            "3. 8p\n"
-          ]
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
