--- a/Modul2/Prak_PBF_RA_Kel_1_Modul_2.ipynb
+++ b/Modul2/Prak_PBF_RA_Kel_1_Modul_2.ipynb
@@ -23,8 +23,8 @@
         "    (\"Diketahui 15p + 27 = 6pq. Nilai 4pq - 18 ?\", [\"10p\", \"12p\", \"8p\"], 'a'),\n",
         "    (\"\"\"Diketahui 12 pekerja dapat menghasilkan gerabah sebanyak 20 buah dalam waktu 25 hari. Jika terdapat 30 pekerja yang menghasilkan 32 buah gerabah, maka berapa waktu yang diperlukan?\"\"\", [\"20 hari\", \"18 hari\", \"16 hari\"], 'c'),\n",
         "    (\"11.1% dari 1827 ?\", [\"201\", \"203\", \"164.59\"], 'b'),\n",
-        "    (\"Deteriorasi adalah \", [\"Kemajuan\", \"Bagian\", \"Kemerosotan\"], 'c'),\n",
-        "    (\"Militan >< \", [\"Agresif\", \"Tenang\", \"Ideologi\"], 'b'),\n",
+        "    (\"Deteriorasi = ... \", [\"Kemajuan\", \"Bagian\", \"Kemerosotan\"], 'c'),\n",
+        "    (\"Militan >< ... \", [\"Agresif\", \"Tenang\", \"Ideologi\"], 'b'),\n",
         "]\n",
         "\n",
         "def get_answer(question, choices):\n",
@@ -39,66 +39,13 @@
         "                raise ValueError(\"Jawaban tidak valid.\")\n",
         "            return ord(jawaban) - 97\n",
         "        except ValueError:\n",
-        "            print(\"Masukkan opsi yang valid (a, b, c).\")\n",
-        "\n",
-        "def calculate_score(score, question, question_number):\n",
-        "    question_text, choices, correct_answer = question\n",
-        "    numbered_question_text = f\"{question_number}. {question_text}\"\n",
-        "    correct_index = ord(correct_answer) - 97\n",
-        "    return score + 20 if get_answer(numbered_question_text, choices) == correct_index else score\n",
-        "\n",
-        "final_score = reduce(lambda score, question: calculate_score(score, question), questions, 0)\n",
-        "\n",
-        "print(\"Skor Kamu Adalah\", final_score)"
+        "            print(\"Masukkan opsi yang valid (a, b, c).\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eDm6eA5dHECM",
-        "outputId": "8bf845f8-9fc5-4723-84a5-b45bb91ceb5c"
+        "id": "eDm6eA5dHECM"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Diketahui 15p + 27 = 6pq. Nilai 4pq - 18 ?\n",
-            "1. 10p\n",
-            "2. 12p\n",
-            "3. 8p\n",
-            "Masukkan jawaban: 1\n",
-            "\n",
-            "Diketahui 12 pekerja dapat menghasilkan gerabah sebanyak 20 buah dalam waktu 25 hari. \n",
-            "Jika terdapat 30 pekerja yang menghasilkan 32 buah gerabah, maka berapa waktu yang diperlukan?\n",
-            "1. 20 hari\n",
-            "2. 18 hari\n",
-            "3. 16 hari\n",
-            "Masukkan jawaban: 3\n",
-            "\n",
-            "11.1% dari 1827 ?\n",
-            "1. 201\n",
-            "2. 203\n",
-            "3. 164.59\n",
-            "Masukkan jawaban: 2\n",
-            "\n",
-            "Deteriorasi adalah \n",
-            "1. Kemajuan\n",
-            "2. Bagian\n",
-            "3. Kemerosotan\n",
-            "Masukkan jawaban: 3\n",
-            "\n",
-            "Militan >< \n",
-            "1. Agresif\n",
-            "2. Tenang\n",
-            "3. Ideologi\n",
-            "Masukkan jawaban: 1\n",
-            "\n",
-            "Skor kamu adalah 80\n"
-          ]
-        }
-      ]
+      "execution_count": 1,
+      "outputs": []
     }
   ]
 }
