menambahkan fungsi generator korelasi matriks

--- a/Modul 4/Kelompok_1_RA_Modul_4.ipynb
+++ b/Modul 4/Kelompok_1_RA_Modul_4.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -40,7 +40,12 @@
       "source": [
         "import seaborn as sns\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n"
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "def correlation_matrix_generator():\n",
+        "  def generate(data):\n",
+        "    df = pd.DataFrame(data)\n",
+        "    corr_matrix = df.corr()"
       ]
     }
   ]
