--- a/Modul 4/Kelompok_1_RA_Modul_4.ipynb
+++ b/Modul 4/Kelompok_1_RA_Modul_4.ipynb
@@ -16,14 +16,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 435
         },
         "id": "iJJ-RvDBF-1r",
-        "outputId": "d4f2207c-a848-454a-ab55-721d8522f450"
+        "outputId": "f3152ce5-5785-4672-ed83-d99b4f8465d9"
       },
       "outputs": [
         {
@@ -45,7 +45,13 @@
         "def correlation_matrix_generator():\n",
         "  def generate(data):\n",
         "    df = pd.DataFrame(data)\n",
-        "    corr_matrix = df.corr()"
+        "    corr_matrix = df.corr()\n",
+        "    sns.heatmap(corr_matrix, annot=True)\n",
+        "    plt.show()\n",
+        "  return generate\n",
+        "\n",
+        "# Contoh pemakaian dengan data dummy\n",
+        "data = pd.read_csv('/content/data inflasi.csv')"
       ]
     }
   ]
