Penambahan komentar penjelasan
komentar penjelasan kode

--- a/Modul 4/Kelompok_1_RA_Modul_4.ipynb
+++ b/Modul 4/Kelompok_1_RA_Modul_4.ipynb
@@ -16,14 +16,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 435
         },
-        "id": "iJJ-RvDBF-1r",
-        "outputId": "f3152ce5-5785-4672-ed83-d99b4f8465d9"
+        "id": "XSZuWQX6GDkD",
+        "outputId": "8be583ec-ead0-4790-cab7-85c85e2e0b20"
       },
       "outputs": [
         {
@@ -38,20 +38,39 @@
         }
       ],
       "source": [
+        "# Import library seaborn untuk visualisasi data\n",
         "import seaborn as sns\n",
+        "# Import library pandas untuk manipulasi data\n",
         "import pandas as pd\n",
+        "# Import library matplotlib.pyplot untuk plotting grafik\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "# Mendefinisikan fungsi untuk menghasilkan matriks korelasi\n",
         "def correlation_matrix_generator():\n",
+        "  # Fungsi internal untuk menghasilkan matriks korelasi\n",
         "  def generate(data):\n",
+        "\n",
+        "    # Membuat dataframe dari data yang diberikan\n",
         "    df = pd.DataFrame(data)\n",
+        "\n",
+        "    # Menghitung matriks korelasi dari DataFrame\n",
         "    corr_matrix = df.corr()\n",
+        "\n",
+        "    # Menampilkan heatmap dari matriks korelasi dengan nilai-nilai di dalamnya\n",
         "    sns.heatmap(corr_matrix, annot=True)\n",
+        "    # Menampilkan plot\n",
         "    plt.show()\n",
+        "\n",
+        "  # Mengembalikan fungsi generate\n",
         "  return generate\n",
         "\n",
-        "# Contoh pemakaian dengan data dummy\n",
-        "data = pd.read_csv('/content/data inflasi.csv')"
+        "# Membaca data dari file CSV\n",
+        "data = pd.read_csv('/content/data inflasi.csv')\n",
+        "\n",
+        "# Mendefinisikan fungsi generator matriks korelasi\n",
+        "generate_corr_matrix = correlation_matrix_generator()\n",
+        "# Menampilkan hasil matriks korelasi\n",
+        "generate_corr_matrix(data)"
       ]
     }
   ]
