--- a/Modul 5/Kelompok1_RA_PBF_Modul5.ipynb
+++ b/Modul 5/Kelompok1_RA_PBF_Modul5.ipynb
@@ -18,35 +18,32 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "y1q7QrrOzG4F",
-        "outputId": "2fcad302-f0dd-4ae2-eabe-40d0d539b627"
+        "id": "y1q7QrrOzG4F"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Pilihan konversi suhu:\n",
-            "1. Celsius ke Fahrenheit\n",
-            "2. Fahrenheit ke Celsius\n",
-            "3. Reamur ke Celsius\n",
-            "4. Celsius ke Reamur\n",
-            "Masukkan pilihan Anda (1/2/3/4): 3\n",
-            "Masukkan suhu: 30\n",
-            "Hasil konversi: 37.50 °\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "def temperature_converter(converter):\n",
         "    \"\"\"Decorator untuk menambahkan informasi konversi ke dalam fungsi.\"\"\"\n",
         "    def wrapper(temperature):\n",
         "        converted = converter(temperature)\n",
         "        print(f\"Hasil konversi: {converted:.2f} °\")\n",
-        "    return wrapper\n"
+        "    return wrapper\n",
+        "\n",
+        " def celsius_to_fahrenheit(celsius):\n",
+        "    \"\"\"Closure untuk konversi suhu dari Celsius ke Fahrenheit.\"\"\"\n",
+        "    return (celsius * 9/5) + 32\n",
+        "\n",
+        "def fahrenheit_to_celsius(fahrenheit):\n",
+        "    \"\"\"Closure untuk konversi suhu dari Fahrenheit ke Celsius.\"\"\"\n",
+        "    return (fahrenheit - 32) * 5/9\n",
+        "\n",
+        "def reamur_to_celsius(reamur):\n",
+        "    \"\"\"Closure untuk konversi suhu dari Reamur ke Celsius.\"\"\"\n",
+        "    return reamur * 5/4\n",
+        "\n",
+        "def celsius_to_reamur(celsius):\n",
+        "    \"\"\"Closure untuk konversi suhu dari Celsius ke Reamur.\"\"\"\n",
+        "    return celsius * 4/5\n"
       ]
     }
   ]
