Penambahan konversi celsius dan fahrenheit
fungsi untuk mengkonversi celsius ke fahrenheit dan juga sebaliknya

--- a/Modul 5/Kelompok1_RA_PBF_Modul5.ipynb
+++ b/Modul 5/Kelompok1_RA_PBF_Modul5.ipynb
@@ -18,7 +18,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "y1q7QrrOzG4F"
+        "id": "O9DfdwmAT5JD"
       },
       "outputs": [],
       "source": [
@@ -29,21 +29,13 @@
         "        print(f\"Hasil konversi: {converted:.2f} °\")\n",
         "    return wrapper\n",
         "\n",
-        " def celsius_to_fahrenheit(celsius):\n",
+        "def celsius_to_fahrenheit(celsius):\n",
         "    \"\"\"Closure untuk konversi suhu dari Celsius ke Fahrenheit.\"\"\"\n",
         "    return (celsius * 9/5) + 32\n",
         "\n",
         "def fahrenheit_to_celsius(fahrenheit):\n",
         "    \"\"\"Closure untuk konversi suhu dari Fahrenheit ke Celsius.\"\"\"\n",
-        "    return (fahrenheit - 32) * 5/9\n",
-        "\n",
-        "def reamur_to_celsius(reamur):\n",
-        "    \"\"\"Closure untuk konversi suhu dari Reamur ke Celsius.\"\"\"\n",
-        "    return reamur * 5/4\n",
-        "\n",
-        "def celsius_to_reamur(celsius):\n",
-        "    \"\"\"Closure untuk konversi suhu dari Celsius ke Reamur.\"\"\"\n",
-        "    return celsius * 4/5\n"
+        "    return (fahrenheit - 32) * 5/9"
       ]
     }
   ]
