--- a/Modul 5/Kelompok1_RA_PBF_Modul5.ipynb
+++ b/Modul 5/Kelompok1_RA_PBF_Modul5.ipynb
@@ -35,7 +35,25 @@
         "\n",
         "def fahrenheit_to_celsius(fahrenheit):\n",
         "    \"\"\"Closure untuk konversi suhu dari Fahrenheit ke Celsius.\"\"\"\n",
-        "    return (fahrenheit - 32) * 5/9"
+        "    return (fahrenheit - 32) * 5/9\n",
+        "\n",
+        "def reamur_to_celsius(reamur):\n",
+        "    \"\"\"Closure untuk konversi suhu dari Reamur ke Celsius.\"\"\"\n",
+        "    return reamur * 5/4\n",
+        "\n",
+        "def celsius_to_reamur(celsius):\n",
+        "    \"\"\"Closure untuk konversi suhu dari Celsius ke Reamur.\"\"\"\n",
+        "    return celsius * 4/5\n",
+        "\n",
+        "# Fungsi input untuk meminta input dari pengguna\n",
+        "def input_conversion():\n",
+        "    print(\"Pilihan konversi suhu:\")\n",
+        "    print(\"1. Celsius ke Fahrenheit\")\n",
+        "    print(\"2. Fahrenheit ke Celsius\")\n",
+        "    print(\"3. Reamur ke Celsius\")\n",
+        "    print(\"4. Celsius ke Reamur\")\n",
+        "    choice = int(input(\"Masukkan pilihan Anda (1/2/3/4): \"))\n",
+        "    return choice"
       ]
     }
   ]
