--- a/Modul 5/Kelompok1_RA_PBF_Modul5.ipynb
+++ b/Modul 5/Kelompok1_RA_PBF_Modul5.ipynb
@@ -53,7 +53,20 @@
         "    print(\"3. Reamur ke Celsius\")\n",
         "    print(\"4. Celsius ke Reamur\")\n",
         "    choice = int(input(\"Masukkan pilihan Anda (1/2/3/4): \"))\n",
-        "    return choice"
+        "    return choice\n",
+        "\n",
+        "def input_temperature():\n",
+        "    temperature = float(input(\"Masukkan suhu: \"))\n",
+        "    return temperature\n",
+        "\n",
+        "# Main program\n",
+        "def main():\n",
+        "    choice = input_conversion()\n",
+        "    temperature = input_temperature()\n",
+        "\n",
+        "    if choice == 1:\n",
+        "        convert = temperature_converter(celsius_to_fahrenheit)\n",
+        "        convert(temperature)\n"
       ]
     }
   ]
