--- a/Modul 6/Kelompok1_RA_PBF_Modul6.ipynb
+++ b/Modul 6/Kelompok1_RA_PBF_Modul6.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -26,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Sudut pembiasan: 38.2226079814105\n"
           ]
@@ -40,8 +26,31 @@
         "    theta_i = math.radians(sudut_potong)\n",
         "    theta_t = math.asin(n1 * math.sin(theta_i) / n2)\n",
         "    return math.degrees(theta_t)\n",
-        "\n"
+        "\n",
+        "def decorator_hitung_sudut_pembiasan(func):\n",
+        "    def wrapper(sudut_potong, n1, n2):\n",
+        "        if n1 <= 0 or n2 <= 0:\n",
+        "            return \"Indeks bias harus positif.\"\n",
+        "        elif n1 == n2:\n",
+        "            return \"Indeks bias harus berbeda.\"\n",
+        "        else:\n",
+        "            return func(sudut_potong, n1, n2)\n",
+        "    return wrapper"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
