--- a/Modul 6/Kelompok1_RA_PBF_Modul6.ipynb
+++ b/Modul 6/Kelompok1_RA_PBF_Modul6.ipynb
@@ -1,26 +1,24 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "8KbUxtdENWKm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rr49khePH0RC",
+        "outputId": "12df82b0-76bc-491e-be60-3f5de0948bf2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sudut pembiasan: 38.2226079814105\n"
+          ]
+        }
+      ],
       "source": [
         "import math\n",
         "\n",
@@ -41,9 +39,22 @@
         "\n",
         "@decorator_hitung_sudut_pembiasan\n",
         "def hitung_dan_cetak_sudut_pembiasan(sudut_potong, n1, n2):\n",
-        "    sudut_pembiasan = hitung_sudut_pembiasan(sudut_potong, n1, n2)\n",
-        "    print(f\"Sudut pembiasan: {sudut_pembiasan}\")"
+        "    sudut_pembiasan = hitung_sudut_pembiasan(sudut_potong, n1, n2)\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
