--- a/Modul 6/Kelompok1_RA_PBF_Modul6.ipynb
+++ b/Modul 6/Kelompok1_RA_PBF_Modul6.ipynb
@@ -16,11 +16,23 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "8KbUxtdENWKm"
+        "id": "8KbUxtdENWKm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "63e9c9f2-ade2-4140-dadb-6185d8431e25"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Sudut pembiasan: 38.2226079814105\n"
+          ]
+        }
+      ],
       "source": [
         "import math\n",
         "\n",
@@ -42,7 +54,9 @@
         "@decorator_hitung_sudut_pembiasan\n",
         "def hitung_dan_cetak_sudut_pembiasan(sudut_potong, n1, n2):\n",
         "    sudut_pembiasan = hitung_sudut_pembiasan(sudut_potong, n1, n2)\n",
-        "    print(f\"Sudut pembiasan: {sudut_pembiasan}\")"
+        "    print(f\"Sudut pembiasan: {sudut_pembiasan}\")\n",
+        "\n",
+        "hitung_dan_cetak_sudut_pembiasan(45,1.4,1.6)"
       ]
     }
   ]
