--- a/Modul 6/Kelompok1_RA_PBF_Modul6.ipynb
+++ b/Modul 6/Kelompok1_RA_PBF_Modul6.ipynb
@@ -1,19 +1,33 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
+        "id": "8KbUxtdENWKm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "rr49khePH0RC",
-        "outputId": "12df82b0-76bc-491e-be60-3f5de0948bf2"
+        "outputId": "16425694-73d5-479f-8b1e-fc23ace1b9d6"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Sudut pembiasan: 38.2226079814105\n"
           ]
@@ -39,22 +53,11 @@
         "\n",
         "@decorator_hitung_sudut_pembiasan\n",
         "def hitung_dan_cetak_sudut_pembiasan(sudut_potong, n1, n2):\n",
-        "    sudut_pembiasan = hitung_sudut_pembiasan(sudut_potong, n1, n2)\n"
+        "    sudut_pembiasan = hitung_sudut_pembiasan(sudut_potong, n1, n2)\n",
+        "    print(f\"Sudut pembiasan: {sudut_pembiasan}\")\n",
+        "\n",
+        "hitung_dan_cetak_sudut_pembiasan(45, 1.4, 1.6)"
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
