--- a/Modul 7/Kelompok1_PBF_RA_Modul7.ipynb
+++ b/Modul 7/Kelompok1_PBF_RA_Modul7.ipynb
@@ -16,6 +16,11 @@
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "fnovk1C5x92J"
+      },
+      "outputs": [],
       "source": [
         "import csv\n",
         "from functools import reduce\n",
@@ -36,13 +41,23 @@
         "    data_list = [row for row in reader]\n",
         "\n",
         "# Filter dictionary yang memiliki kolom Zip dan Neighborhood serta kolom waktu yang valid\n",
-        "filtered_data = list(filter(lambda x: x['zip_code'] and x['neighborhood'] and is_float(x['totalresponsetime']) and is_float(x['dispatchtime']) and is_float(x['totaltime']), data_list))\n"
-      ],
-      "metadata": {
-        "id": "lBbE8r47rC6i"
-      },
-      "execution_count": null,
-      "outputs": []
+        "filtered_data = list(filter(lambda x: x['zip_code'] and x['neighborhood'] and is_float(x['totalresponsetime']) and is_float(x['dispatchtime']) and is_float(x['totaltime']), data_list))\n",
+        "\n",
+        "# Fungsi untuk menghitung rata-rata waktu\n",
+        "def calculate_averages(data):\n",
+        "    total_respons_time = reduce(lambda acc, x: acc + float(x['totalresponsetime']), data, 0)\n",
+        "    total_dispatch_time = reduce(lambda acc, x: acc + float(x['dispatchtime']), data, 0)\n",
+        "    total_time = reduce(lambda acc, x: acc + float(x['totaltime']), data, 0)\n",
+        "    count = len(data)\n",
+        "\n",
+        "    return {\n",
+        "        'average_response_time': total_respons_time / count if count else 0,\n",
+        "        'average_dispatch_time': total_dispatch_time / count if count else 0,\n",
+        "        'average_total_time': total_time / count if count else 0\n",
+        "    }\n",
+        "\n",
+        "averages = calculate_averages(filtered_data)"
+      ]
     }
   ]
 }
