--- a/Modul 7/Kelompok1_PBF_RA_Modul7.ipynb
+++ b/Modul 7/Kelompok1_PBF_RA_Modul7.ipynb
@@ -36,10 +36,40 @@
         "    data_list = [row for row in reader]\n",
         "\n",
         "# Filter dictionary yang memiliki kolom Zip dan Neighborhood serta kolom waktu yang valid\n",
-        "filtered_data = list(filter(lambda x: x['zip_code'] and x['neighborhood'] and is_float(x['totalresponsetime']) and is_float(x['dispatchtime']) and is_float(x['totaltime']), data_list))\n"
+        "filtered_data = list(filter(lambda x: x['zip_code'] and x['neighborhood'] and is_float(x['totalresponsetime']) and is_float(x['dispatchtime']) and is_float(x['totaltime']), data_list))\n",
+        "\n",
+        "# Fungsi untuk menghitung rata-rata waktu\n",
+        "def calculate_averages(data):\n",
+        "    total_respons_time = reduce(lambda acc, x: acc + float(x['totalresponsetime']), data, 0)\n",
+        "    total_dispatch_time = reduce(lambda acc, x: acc + float(x['dispatchtime']), data, 0)\n",
+        "    total_time = reduce(lambda acc, x: acc + float(x['totaltime']), data, 0)\n",
+        "    count = len(data)\n",
+        "\n",
+        "    return {\n",
+        "        'average_response_time': total_respons_time / count if count else 0,\n",
+        "        'average_dispatch_time': total_dispatch_time / count if count else 0,\n",
+        "        'average_total_time': total_time / count if count else 0\n",
+        "    }\n",
+        "\n",
+        "averages = calculate_averages(filtered_data)"
       ],
       "metadata": {
         "id": "lBbE8r47rC6i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from itertools import groupby\n",
+        "\n",
+        "# Pisahkan data berdasarkan Neighborhood\n",
+        "filtered_data.sort(key=lambda x: x['neighborhood'])\n",
+        "neighborhood_groups = {k: list(v) for k, v in groupby(filtered_data, key=lambda x: x['neighborhood'])}\n"
+      ],
+      "metadata": {
+        "id": "OTVjfRwX1472"
       },
       "execution_count": null,
       "outputs": []
