--- a/Modul 7/Kelompok1_PBF_RA_Modul7.ipynb
+++ b/Modul 7/Kelompok1_PBF_RA_Modul7.ipynb
@@ -66,7 +66,21 @@
         "\n",
         "# Pisahkan data berdasarkan Neighborhood\n",
         "filtered_data.sort(key=lambda x: x['neighborhood'])\n",
-        "neighborhood_groups = {k: list(v) for k, v in groupby(filtered_data, key=lambda x: x['neighborhood'])}\n"
+        "neighborhood_groups = {k: list(v) for k, v in groupby(filtered_data, key=lambda x: x['neighborhood'])}\n",
+        "\n",
+        "# Fungsi untuk menghitung rata-rata waktu untuk setiap Neighborhood\n",
+        "def calculate_neighborhood_averages(neighborhood_data):\n",
+        "    total_respons_time = reduce(lambda acc, x: acc + float(x['totalresponsetime']), neighborhood_data, 0)\n",
+        "    total_dispatch_time = reduce(lambda acc, x: acc + float(x['dispatchtime']), neighborhood_data, 0)\n",
+        "    total_time = reduce(lambda acc, x: acc + float(x['totaltime']), neighborhood_data, 0)\n",
+        "    count = len(neighborhood_data)\n",
+        "\n",
+        "    return {\n",
+        "        'average_response_time': total_respons_time / count if count else 0,\n",
+        "        'average_dispatch_time': total_dispatch_time / count if count else 0,\n",
+        "        'average_total_time': total_time / count if count else 0\n",
+        "    }\n",
+        "\n"
       ],
       "metadata": {
         "id": "OTVjfRwX1472"
