--- a/Modul 7/Kelompok1_PBF_RA_Modul7.ipynb
+++ b/Modul 7/Kelompok1_PBF_RA_Modul7.ipynb
@@ -1,21 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "lBbE8r47rC6i"
+      },
+      "outputs": [],
       "source": [
         "import csv\n",
         "from functools import reduce\n",
@@ -51,16 +42,16 @@
         "        'average_total_time': total_time / count if count else 0\n",
         "    }\n",
         "\n",
-        "averages = calculate_averages(filtered_data)"
-      ],
-      "metadata": {
-        "id": "lBbE8r47rC6i"
-      },
-      "execution_count": null,
-      "outputs": []
+        "averages = calculate_averages(filtered_data)\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "6RD-gci-uEWo"
+      },
+      "outputs": [],
       "source": [
         "from itertools import groupby\n",
         "\n",
@@ -80,13 +71,29 @@
         "        'average_dispatch_time': total_dispatch_time / count if count else 0,\n",
         "        'average_total_time': total_time / count if count else 0\n",
         "    }\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "OTVjfRwX1472"
-      },
-      "execution_count": null,
-      "outputs": []
+        "\n",
+        "neighborhood_averages = [\n",
+        "    {'Neighborhood': neighborhood, **calculate_neighborhood_averages(data)}\n",
+        "    for neighborhood, data in neighborhood_groups.items()\n",
+        "]\n",
+        "\n",
+        "# Menyertakan data populasi untuk seluruh Detroit\n",
+        "combined_data = neighborhood_averages + [averages]"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
